--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -12,6 +12,11 @@
       </head>
 
       <body>
+        <header>
+          <h1>
+            Les vélos à Montréal - Une carte intéractive
+          </h1>
+        </header>
         <main>
           <div class="viz-container">
             <div class="graph" id="map">
