--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Description" content="Code pour le projet final de INF8808.">
-        <title>Projet final | INF8808</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="Code pour le projet final de INF8808." />
+    <title>Projet final | INF8808</title>
 
-        <link rel="stylesheet" href="assets/typography.css">
-        <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/typography.css" />
+    <link rel="stylesheet" href="assets/style.css" />
+  </head>
 
-      </head>
-
-      <body>
-        <header>
-          <h1>
-            Les vélos à Montréal - Une carte intéractive
-          </h1>
-        </header>
-        <main>
-          <div class="viz-container">
-            <div class="graph" id="map">
-              <svg class="main-svg"></svg>
-            </div>
-          </div>
-        </main>
-        <script src="https://d3js.org/d3.v5.js"></script>
-        <script type="module" src="index.js"></script>
-      </body>
+  <body>
+    <header>
+      <h1>Les vélos à Montréal - Une carte intéractive</h1>
+    </header>
+    <main>
+      <div class="viz-container">
+        <div class="graph" id="map">
+          <svg class="main-svg"></svg>
+        </div>
+      </div>
+    </main>
+    <script src="https://d3js.org/d3.v5.js"></script>
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
