Un debut de bouton qui affiche dequoi ish

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -18,6 +18,7 @@
       <div class="viz-container">
         <div class="graph" id="map">
           <svg class="main-svg"></svg>
+          <select id="dropdownButton"></select>
         </div>
       </div>
     </main>
