Ajout du graph bar-chart au code HTML

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -20,6 +20,9 @@
           <svg class="main-svg"></svg>
           <select id="dropdownButton"></select>
         </div>
+        <div class="graph" id="bar-chart">
+          <svg class="main-svg"></svg>
+        </div>
       </div>
     </main>
     <script src="https://d3js.org/d3.v5.js"></script>
