--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -16,12 +16,15 @@
     </header>
     <main>
       <div class="viz-container">
-        <div class="graph" id="map">
-          <svg class="main-svg"></svg>
+        <div class="graph">
+          <svg class="main-svg" id="map-svg"></svg>
           <select id="dropdownButton"></select>
         </div>
-        <div class="graph" id="bar-chart">
-          <svg class="main-svg"></svg>
+        <div class="graph">
+          <svg class="main-svg" id="area-svg"></svg>
+        </div>
+        <div class="graph">
+          <svg class="main-svg" id="bar-svg"></svg>
         </div>
       </div>
     </main>
