--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -26,6 +26,9 @@
         <div class="graph">
           <svg class="main-svg" id="bar-svg"></svg>
         </div>
+        <div class="graph">
+          <svg class="main-svg" id="bar-chart"></svg>
+        </div>
       </div>
     </main>
     <script src="https://d3js.org/d3.v5.js"></script>
