Add basic circles to map

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -18,7 +18,7 @@
       <div class="viz-container">
         <div class="graph">
           <svg class="main-svg" id="map-svg"></svg>
-          <select id="dropdownButton"></select>
+          <select id="dropdown"></select>
         </div>
         <div class="graph">
           <svg class="main-svg" id="area-svg"></svg>
