Add line-svg to main-svg

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -21,13 +21,13 @@
           <select id="dropdown"></select>
         </div>
         <div class="graph">
+          <svg class="main-svg" id="line-svg"></svg>
+        </div>
+        <div class="graph">
           <svg class="main-svg" id="area-svg"></svg>
         </div>
         <div class="graph">
           <svg class="main-svg" id="bar-svg"></svg>
-        </div>
-        <div class="graph">
-          <svg class="main-svg" id="bar-chart"></svg>
         </div>
       </div>
     </main>
