--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Code pour le projet final de INF8808.">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="Code pour le projet final de INF8808." />
     <title>Projet final | INF8808</title>
 
-    <link rel="stylesheet" href="/typography.dee6a454.css">
-    <link rel="stylesheet" href="/style.87efa8b0.css">
+    <link rel="stylesheet" href="assets/typography.css" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
 
   <body>
@@ -29,6 +29,6 @@
       </div>
     </main>
     <script src="https://d3js.org/d3.v5.js"></script>
-    <script type="module" src="/src.0509b1b7.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
