--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -16,9 +16,10 @@
     </header>
     <main>
       <div class="viz-container">
-        <div class="graph">
-          <svg class="main-svg" id="map-svg"></svg>
-          <select id="dropdown"></select>
+        <div class="graph" id="map-div">
+          <svg class="main-svg" id="map-svg">
+            <g id="line-svg"></g>
+          </svg>
         </div>
         <div class="graph">
           <svg class="main-svg" id="area-svg"></svg>
