Fix missing line chart issue

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -17,9 +17,7 @@
     <main>
       <div class="viz-container">
         <div class="graph" id="map-div">
-          <svg class="main-svg" id="map-svg">
-            <g id="line-svg"></g>
-          </svg>
+          <svg class="main-svg" id="map-svg"></svg>
         </div>
         <div class="graph">
           <svg class="main-svg" id="area-svg"></svg>
