Fix dropdown position

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -16,6 +16,10 @@
     </header>
     <main>
       <div class="viz-container">
+        <div id="dropdown-container">
+          <h3>Année :</h3>
+          <select id="dropdown"></select>
+        </div>
         <div class="graph" id="map-div">
           <svg class="main-svg" id="map-svg"></svg>
         </div>
