Add loading animation

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -15,7 +15,8 @@
       <h1>Les vélos à Montréal - Une carte intéractive</h1>
     </header>
     <main>
-      <div class="viz-container">
+      <div id="spinner"></div>
+      <div id="viz-container">
         <div id="dropdown-container">
           <h3>Année :</h3>
           <select id="dropdown"></select>
