Add CSS blurred shadow

--- a/Projet/src/index.html
+++ b/Projet/src/index.html
@@ -21,7 +21,7 @@
           <h3>Année :</h3>
           <select id="dropdown"></select>
         </div>
-        <div class="graph" id="map-div">
+        <div class="graph">
           <svg class="main-svg" id="map-svg"></svg>
         </div>
         <div class="graph">
